giant HTML cleanup
replaced HTML codes (&[SOMETHING];) with Unicode characters; cleaned up the nav elements; removed unnecessary section elements; cleaned up the footers; cleaned up all paragraph elements;

--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -32,31 +32,23 @@
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
-
 		gtag('config', 'UA-169207994-1');
 	</script>
+
 	<header>
 		<h1 class=title>The Thaumatorium:</h1>
 		<div class=subtitle>Where the magic happens</div>
 	</header>
 
 	<nav>
-		<a href="/">Frontpage</a>
-		<span> - </span>
-		<a href=/pages/articles.html>Articles</a>
-		<span> - </span>
-		<a href=/pages/projects.html>Projects</a>
-		<span> - </span>
-		<a href=/pages/experimentations.html>Experimentations</a>
-		<span> - </span>
-		<a href=/pages/code-of-conduct.html>Code of Conduct</a>
-		<span> - </span>
-		<a href=/pages/random-video.html>Random video</a>
-		<span> - </span>
-		<a href=/pages/hardware.html>Hardware</a>
-		<span> - </span>
-		<a href=/pages/knowledge-base.html>Knowledge Base</a>
-		<span> - </span>
+		<a href="/">Frontpage</a><span> - </span>
+		<a href=/pages/articles.html>Articles</a><span> - </span>
+		<a href=/pages/projects.html>Projects</a><span> - </span>
+		<a href=/pages/experimentations.html>Experimentations</a><span> - </span>
+		<a href=/pages/code-of-conduct.html>Code of Conduct</a><span> - </span>
+		<a href=/pages/random-video.html>Random video</a><span> - </span>
+		<a href=/pages/hardware.html>Hardware</a><span> - </span>
+		<a href=/pages/knowledge-base.html>Knowledge Base</a><span> - </span>
 		<a href=/pages/about.html>About</a>
 	</nav>
 
@@ -82,7 +74,6 @@
 					<tr>
 						<th>Attributes
 						<th>Zeus
-					</tr>
 				</thead>
 				<tbody>
 					<tr>
@@ -118,10 +109,8 @@
 				<a href="#selene-2013" class="self-link"></a>
 				Selene (2013)
 			</h2>
-			<p>Selene (named after the moon) was my old PC and currently functions as backup server (even though it's an
-				old desktop PC)</p>
-			<p>I used to play games on this machine, but it got <em>very</em> frustrating as PUBG (which I played at the
-				time) ran terrible, even on low settings, as the devs kept adding effects which I couldn't disable.</p>
+			<p>Selene (named after the moon) was my old PC and currently functions as backup server (even though it's an old desktop PC)</p>
+			<p>I used to play games on this machine, but it got <em>very</em> frustrating as PUBG (which I played at the time) ran terrible, even on low settings, as the devs kept adding effects which I couldn't disable.</p>
 			<table>
 				<thead>
 					<tr>
@@ -163,28 +152,12 @@
 				<a href="#hyperion-2016" class="self-link"></a>
 				Hyperion (2016)
 			</h2>
-			<p>Hyperion (named after the sun) is my current laptop and I bought it one at the start of my Bachelor's (HBO,
-				for the Duchies) and it has served me well!</p>
-			<p>Right now it serves as third monitor and is being controlled by Zeus' keyboard and mouse, via a program
-				called <a href="https://github.com/debauchee/barrier#barrier">Barrier</a>, as Synergy turned into a paid
-				product a few years ago</p>
-			<p>It's an <a href="https://tweakers.net/pricewatch/484153/asus-zenbook-pro-ux501vw-fj024t/specificaties/">Asus
-					Zenbook
-					Pro UX501VW-FJ024T</a> - you can find more under Zenbook UX501VW, but FJ024T is the specific one I have.
-			</p>
-			<p><strong>Protip 1:</strong> a 2160p (4k) monitor is too small for 16". Yes, it's very sharp, but the 1 meter
-				distance removes the benefit of such a resolution. 1440p would probably be a sweet spot, as 1080p can be
-				pixely.</p>
-			<p><strong>Protip 2:</strong> Make sure to check YouTube if the laptop can get rid of its heat well enough on
-				a longer load (if you need that). Mine starts to throttle like crazy when playing PUBG and World of
-				Warcraft, which means I have to undervolt via <a
-					href="https://downloadcenter.intel.com/download/29183/Intel-Extreme-Tuning-Utility-Intel-XTU-">Intel
-					XTU</a> and/or underclock. This can be done via Windows Powerplan for the CPU and (maybe) MSI Afterburner
-				for the GPU.</p>
-			<p><strong>Protip 3:</strong> Make sure your monitor's brightness is above 400 nits, if possible - 350 nits is
-				OK. Not being able to see your screen because the sun is brighter than your monitor sucks. For reference:
-				<strong>the UX501's monitor is 289 nits</strong>, as per <a
-					href="https://www.laptopmag.com/reviews/laptops/asus-zenbook-pro-ux501">Laptop Mag</a></p>
+			<p>Hyperion (named after the sun) is my current laptop and I bought it one at the start of my Bachelor's (HBO, for the Duchies) and it has served me well!</p>
+			<p>Right now it serves as third monitor and is being controlled by Zeus' keyboard and mouse, via a program called <a href="https://github.com/debauchee/barrier#barrier">Barrier</a>, as Synergy turned into a paid product a few years ago</p>
+			<p>It's an <a href="https://tweakers.net/pricewatch/484153/asus-zenbook-pro-ux501vw-fj024t/specificaties/">Asus Zenbook Pro UX501VW-FJ024T</a> - you can find more under Zenbook UX501VW, but FJ024T is the specific one I have.</p>
+			<p><strong>Protip 1:</strong> a 2160p (4k) monitor is too small for 16". Yes, it's very sharp, but the 1 meter distance removes the benefit of such a resolution. 1440p would probably be a sweet spot, as 1080p can be pixely.</p>
+			<p><strong>Protip 2:</strong> Make sure to check YouTube if the laptop can get rid of its heat well enough on a longer load (if you need that). Mine starts to throttle like crazy when playing PUBG and World of Warcraft, which means I have to undervolt via <a href="https://downloadcenter.intel.com/download/29183/Intel-Extreme-Tuning-Utility-Intel-XTU-">Intel XTU</a> and/or underclock. This can be done via Windows Powerplan for the CPU and (maybe) MSI Afterburner for the GPU.</p>
+			<p><strong>Protip 3:</strong> Make sure your monitor's brightness is above 400 nits, if possible - 350 nits is OK. Not being able to see your screen because the sun is brighter than your monitor sucks. For reference: <strong>the UX501's monitor is 289 nits</strong>, as per <a href="https://www.laptopmag.com/reviews/laptops/asus-zenbook-pro-ux501">Laptop Mag</a></p>
 			<table>
 				<thead>
 					<tr>
@@ -227,27 +200,20 @@
 
 	<footer>
 		<div class=copyright>
-			&copy;<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
-			&ndash; <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;"></a>,
-			<abbr
-				title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'"
-				style="text-decoration: none; color: #800;">Thaumatorium</abbr>
+			©<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
+			– <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;"></a>,
+			<abbr title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'" style="text-decoration: none; color: #800;">Thaumatorium</abbr>
 			<p><sub>Last updated: <time id=updated>2020-07-03</time></sub></p>
 		</div>
 		<nav>
-			<a href="https://www.reddit.com/user/nostradavid">Reddit profile</a>
-			<span> - </span>
-			<a href="https://twitter.com/DavidNostra">Twitter profile</a>
-			<span> - </span>
-			<a href="https://github.com/NostraDavid">GitHub (personal)</a>
-			<span> - </span>
-			<a href="https://github.com/Thaumatorium">GitHub (professional)</a>
-			<span> - </span>
+			<a href="https://www.reddit.com/user/nostradavid">Reddit profile</a><span> - </span>
+			<a href="https://twitter.com/DavidNostra">Twitter profile</a><span> - </span>
+			<a href="https://github.com/NostraDavid">GitHub (personal)</a><span> - </span>
+			<a href="https://github.com/Thaumatorium">GitHub (professional)</a><span> - </span>
 			<a href="https://www.facebook.com/david.nostra.121">Facebook profile</a>
 		</nav>
 		<!-- Sssh - don't tell anyone! -->
-		<a class=secret onclick=specialGoto(event)
-			style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
+		<a class=secret onclick=specialGoto(event) style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">π</a>
 		<div class=cookie-notification>
 			<p>This site uses cookies from Google to deliver its services and to analyze traffic.</p>
 			<button>OK</button>
