--- a/projects/canvas-projects/maze.html
+++ b/projects/canvas-projects/maze.html
@@ -1,34 +1,33 @@
 <section>
-  <link rel=stylesheet href=/projects/canvas-projects/maze.css>
-  <h2>Maze solver</h2>
-  <p>Based on <a href=https://github.com/JonPizza/recursive-maze-solver>JonPizza's maze solver</a>, but translated to
-    Nim</p>
-  <p>I also have a version made in <a href=https://github.com/NostraDavid/MazeSolver-Nim>Nim</a> </p>
-  <p>
-    <select id=selected-maze type=select-one>
-      <option value=mazes/maze.png selected>maze.png</option>
-      <option value=mazes/maze2.png>maze2.png</option>
-      <option value=mazes/3232maze_original.png>3232maze_original.png</option>
-      <option value=mazes/3232maze_long.png>3232maze_long.png</option>
-      <option value=mazes/3232maze_longer.png>3232maze_longer.png</option>
-      <option value=mazes/3232maze_longest.png>3232maze_longest.png</option>
-      <option value=mazes/3232maze_longer_bigger.png>3232maze_longer_bigger.png</option>
-    </select>
-    <select id=maze-scale type=select-one>
-      <option value=1>1</option>
-      <option value=2>2</option>
-      <option value=3>3</option>
-      <option value=4>4</option>
-      <option value=5>5</option>
-      <option value=6>6</option>
-      <option value=7>7</option>
-      <option value=8>8</option>
-      <option value=9>9</option>
-      <option value=10 selected>10</option>
-    </select>
+	<link rel=stylesheet href=/projects/canvas-projects/maze.css>
+	<h2>Maze solver</h2>
+	<p>Based on <a href=https://github.com/JonPizza/recursive-maze-solver>JonPizza's maze solver</a>, but translated to Nim</p>
+	<p>I also have a version made in <a href=https://github.com/NostraDavid/MazeSolver-Nim>Nim</a> </p>
+	<p>
+		<select id=selected-maze type=select-one>
+			<option value=mazes/maze.png selected>maze.png</option>
+			<option value=mazes/maze2.png>maze2.png</option>
+			<option value=mazes/3232maze_original.png>3232maze_original.png</option>
+			<option value=mazes/3232maze_long.png>3232maze_long.png</option>
+			<option value=mazes/3232maze_longer.png>3232maze_longer.png</option>
+			<option value=mazes/3232maze_longest.png>3232maze_longest.png</option>
+			<option value=mazes/3232maze_longer_bigger.png>3232maze_longer_bigger.png</option>
+		</select>
+		<select id=maze-scale type=select-one>
+			<option value=1>1</option>
+			<option value=2>2</option>
+			<option value=3>3</option>
+			<option value=4>4</option>
+			<option value=5>5</option>
+			<option value=6>6</option>
+			<option value=7>7</option>
+			<option value=8>8</option>
+			<option value=9>9</option>
+			<option value=10 selected>10</option>
+		</select>
 
-    <button id=play-animation>Play animation</button>
-  </p>
-  <canvas id=maze></canvas>
-  <script type=module src="maze.mjs"></script>
+		<button id=play-animation>Play animation</button>
+	</p>
+	<canvas id=maze></canvas>
+	<script type=module src="maze.mjs"></script>
 </section>
