--- a/404.html
+++ b/404.html
@@ -55,16 +55,14 @@
 	<main>
 		<section>
 			<h1>404 File Not Found</h1>
-			<p>You've gone somewhere, where you're not supposed to be!</p>
-			<h2>Here, try an archive</h2>
-			<a id=archive></a>
-			<h2>or an integrated Google Search</h2>
-			<p>Can't see the search bar? Press <kbd>Ctrl+F5</kbd> to force it to show up.</p>
+			<p>You've gone somewhere, where you're not supposed to be! That or I removed the page. It's likely my fault.</p>
+			<p>Give the archives a try: <a id=archive></a></p>
+			<p>Or search the site</p>
 			<!-- created via https://cse.google.com/cse/all -->
 			<script async src="https://cse.google.com/cse.js?cx=007273406661708460536:ir7f8zjh3fd"></script>
 			<div class="gcse-search"></div>
 			<footer>
-				Hit me up if any other search engine provides a customized search. I'm happy to drop a Google product.
+				PS: Hit me up (on one of the links in the footer) if any other search engine provides a customized search. This version is by Google, but I'd like to NOT use Google if I could. They already have enough power on the internet.
 			</footer>
 		</section>
 		<script>
