--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -56,6 +56,7 @@
 		<section>
 			<h2>The Thaumatorium's Code of Conduct</h2>
 			<img src=/images/conduct.webp alt="the Code of Conduct for this site">
+			<p>No really, that's it. I currently don't see the need to expand on this image.</p>
 		</section>
 	</main>
 
