--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
 				</h2>
 				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
+					<li><time>2020-08-04</time> Add FB/Twitter metadata to all other pages, especially the Template page.
+					<li><time>2020-08-04</time> Add canonical links to all other pages (other than the frontpage).
 					<li><time>2020-08-04</time> Create an article where I explain how I created this site. Use keywords to improve the pull to this site.
 					<li><time>2020-08-04</time> Add meta tag for keywords to each page. <code>&lt;meta name="keywords" content="Keyword1, Keyword2, Keyword3"&gt;</code> At the very least it won't hurt.
 					<li><time>2020-08-03</time> Create a Twitch addon that shows a counted and then sorted list of emotes from chat: [12x LULW, 6x LUL, 4x Pogey, 4x KKomando, 4xlowZ, 1x asmonMcCool]
