--- a/pages/praetorianpi.html
+++ b/pages/praetorianpi.html
@@ -78,7 +78,7 @@
 		</nav>
 		<!-- Sssh - don't tell anyone! -->
 		<a class=secret onclick=specialGoto(event) style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">π</a>
-		<div class=cookie-notification>
+		<div id=cookie-notification>
 			<p>This site uses cookies from Google to deliver its services and to analyze traffic.</p>
 			<button>OK</button>
 		</div>
