--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,19 +10,19 @@
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<link rel=manifest href=/manifest.json />
 	<link rel=icon href=/images/favicon.svg />
-	<link rel="stylesheet" href="/styles/layout.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="stylesheet" href="/styles/header.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="stylesheet" href="/styles/nav.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="stylesheet" href="/styles/main.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="stylesheet" href="/styles/footer.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="stylesheet" href="/styles/cookie.css?v=1" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/layout.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/header.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/nav.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/footer.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="/styles/cookie.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript>
-		<link rel=stylesheet href="/styles/layout.css?v=1" />
-		<link rel=stylesheet href="/styles/header.css?v=1" />
-		<link rel=stylesheet href="/styles/nav.css?v=1" />
-		<link rel=stylesheet href="/styles/main.css?v=1" />
-		<link rel=stylesheet href="/styles/footer.css?v=1" />
-		<link rel=stylesheet href="/styles/cookie.css?v=1" />
+		<link rel=stylesheet href="/styles/layout.css" />
+		<link rel=stylesheet href="/styles/header.css" />
+		<link rel=stylesheet href="/styles/nav.css" />
+		<link rel=stylesheet href="/styles/main.css" />
+		<link rel=stylesheet href="/styles/footer.css" />
+		<link rel=stylesheet href="/styles/cookie.css" />
 	</noscript>
 </head>
 
@@ -54,7 +54,7 @@
 
 	<main>
 		<h2>My programming projects</h2>
-		<link async rel=stylesheet href="/styles/projects.css?v=1" />
+		<link async rel=stylesheet href="/styles/projects.css" />
 		<details>
 			<summary>
 				<h3>Thaumatorium.com</h3>
