improved quality of virtue-signalling image
improved quality via Gigapixel, then shopped the image to improve the quality of the rainbow logo

--- a/pages/about.html
+++ b/pages/about.html
@@ -95,7 +95,7 @@
 		<p>There's a lot more that I'm going to forbid, but I think that's one of the big ones - one you <em>don't</em> see on other sites, unlike the stereotypical "no racism, hate, etc" virtue signalling bullshit.</p>
 		<p>Yes, I also hate Virtue Signalling month of June. LGBT all of a sudden matters to giant corporations. Corporations that don't give a fuck about the places where it <em>actually</em> matters:</p>
 		<figure>
-			<img src=/images/virtue-signalling.jpg alt="Bethesda Softworks LLC showing an LGBT logos for their Twitter accounts in the Netherlands, Japan, Australia, United Kingdom, Germany and France, but not for their Russia, Turkey and Middle East accounts">
+			<img src=/images/virtue-signalling.png alt="Bethesda Softworks LLC showing an LGBT logos for their Twitter accounts in the Netherlands, Japan, Australia, United Kingdom, Germany and France, but not for their Russia, Turkey and Middle East accounts">
 			<figcaption>The source of this image is <a href="https://twitter.com/RudyHavenstein/status/1275833222170107904">@RudyHavenstein</a></figcaption>
 		</figure>
 		<p>I fucking loathe hypocritical behavior like that. They're basically lying to their western customers, acting as if they're doing good, while only changing the icon in the place that already legally and socially accept LGBT humans.</p>
