fix duplicate id on index.html

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 				<p>If you want to know more about this site, check out the <a href="/pages/about.html">About</a> page.
 			</section>
 			<section>
-				<h2 id=welcome>
-					<a href="#welcome" class="self-link"></a>
+				<h2 id=top-articles>
+					<a href="#top-articles" class="self-link"></a>
 					Top articles
 				</h2>
 				<ul>
