--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>404, page not found</title>
-	<meta name=description content="Looks like you tried to access a page that doesn't exist (anymore)" />
+	<title>404 Not Found</title>
+	<meta name=description content="Archival & Search available so you can find what you need" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
 	<meta name=viewport content="width=device-width, initial-scale=1">
@@ -54,7 +54,7 @@
 
 	<main>
 		<section>
-			<h1>404 File Not Found</h1>
+			<h1>404 Not Found</h1>
 			<p>You've gone somewhere, where you're not supposed to be! That or I removed the page. It's likely my fault.</p>
 			<p>Give the archives a try: <a id=archive></a></p>
 			<p>Or search the site</p>
