--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>The Thaumatorium's Code of Conduct</title>
-	<meta name=description content="The rules one should follow on this site" />
+	<title>Code of Conduct</title>
+	<meta name=description content="The rules one should follow on this site's comment section" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
 	<meta name=viewport content="width=device-width, initial-scale=1">
