turn h1 in header into div
This is to improve SEO - h1s are meant to be article titles, not the website's name. Turns out website names aren't important at all and h1 implies a certain importance.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	</script>
 
 	<header>
-		<h1 class=title>The Thaumatorium:</h1>
+		<div class=title>The Thaumatorium:</div>
 		<div class=subtitle>Where the magic happens</div>
 	</header>
 
